--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,11 @@ add_library(
     ${UMGMT_SOURCES}
 )
 
+target_compile_options(
+    ${CMAKE_PROJECT_NAME}
+    PRIVATE -fPIC
+)
+
 target_link_libraries(
 	${CMAKE_PROJECT_NAME}
 
